Fix tombol tidak bisa diklik

--- a/diagnosa.html
+++ b/diagnosa.html
@@ -24,8 +24,10 @@
         <div class="diagnosa-question">
             <h2>Gejala 1 (GP04):<br>Apakah sapi mengalami kurang nafsu makan?</h2>
             <div class="diagnosa-buttons">
-                <a href="G10.html"><button class="btn-yes">Ya</button></a>
-                <a href="#"><button class="btn-no">Tidak</button></a>
+                <div class="diagnosa-buttons">
+    <a href="G10.html"><button class="btn-yes">Ya</button></a>
+    
+    <a href="index.html"><button class="btn-no">Tidak</button></a>
             </div>
         </div>
     </div>
