add gambar sapi

--- a/index.html
+++ b/index.html
@@ -27,5 +27,26 @@
     <a href="diagnosa.html"><button class="btn-yes">Mulai Konsultasi</button></a>
 </section>
 
+<section class="about-preview">
+    <div class="img-box">
+        <img src="assets/content.png" alt="Ilustrasi Sapi" class="feature-img">
+    </div>
+    
+    <div class="text-box">
+        <h3>Kenapa Sistem Ini Dibuat?</h3>
+        <p>Berdasarkan Jurnal <strong>IJASEIT Vol.14</strong>, peternak di Papua Barat sering terlambat mendeteksi penyakit sapi karena kurangnya tenaga medis.</p>
+        <br>
+        <p>Sistem ini menggabungkan kecerdasan buatan:</p>
+        <ul class="feature-list">
+            <li>✅ <strong>Forward Chaining:</strong> Melacak gejala ke penyakit.</li>
+            <li>✅ <strong>Certainty Factor:</strong> Tingkat akurasi tinggi (99.84%).</li>
+            <li>✅ <strong>Bayes Theorem:</strong> Perhitungan probabilitas gejala baru.</li>
+        </ul>
+    </div>
+</section>
+
+</body>
+</html>
+
 </body>
 </html>
